--- a/index.html
+++ b/index.html
@@ -192,6 +192,20 @@ const cv = document.getElementById("cv");
 const ctx = cv.getContext("2d");
 const stage = document.getElementById("stage");
 
+/** =========================
+ *  ✅ base64url (주소 안전)
+ *  ========================= */
+function b64urlEncode(str){
+  const b64 = btoa(unescape(encodeURIComponent(str)));
+  return b64.replace(/\+/g,"-").replace(/\//g,"_").replace(/=+$/g,"");
+}
+function b64urlDecode(b64url){
+  const b64 = b64url.replace(/-/g,"+").replace(/_/g,"/");
+  const pad = "===".slice((b64.length + 3) % 4);
+  const out = atob(b64 + pad);
+  return decodeURIComponent(escape(out));
+}
+
 const state = {
   seasonMax: 162,
   mode: "EDIT",
@@ -360,21 +374,38 @@ function applyPack(obj){
   state.child = null;
 }
 
-function saveToHash(){
+/** =========================
+ *  ✅ 링크 저장/불러오기 (안정화)
+ *  ========================= */
+function saveToHashAndCopy(){
   const str = JSON.stringify(pack());
-  const b64 = btoa(unescape(encodeURIComponent(str)));
-  location.hash = b64;
+  const hash = b64urlEncode(str);
+
+  // 주소창 업데이트(새 히스토리 쌓지 않음)
+  history.replaceState(null, "", "#" + hash);
+
+  const shareUrl = location.origin + location.pathname + "#" + hash;
+
+  // 클립보드 복사 (실패하면 prompt로)
+  if(navigator.clipboard && navigator.clipboard.writeText){
+    navigator.clipboard.writeText(shareUrl)
+      .then(()=> alert("링크 저장 완료! (클립보드 복사됨)\n이 링크를 공유하면 노드/라인/포인트/배경이 그대로 보입니다."))
+      .catch(()=> prompt("복사 실패. 아래 링크를 직접 복사해줘:", shareUrl));
+  }else{
+    prompt("아래 링크를 복사해줘:", shareUrl);
+  }
 }
 
 function loadFromHash(){
   try{
-    const h = location.hash.replace("#","");
+    const h = (location.hash || "").replace(/^#/,"").trim();
     if(!h) return false;
-    const str = decodeURIComponent(escape(atob(h)));
+    const str = b64urlDecode(h);
     const obj = JSON.parse(str);
     applyPack(obj);
     return true;
   }catch(e){
+    console.warn("Hash load failed:", e);
     return false;
   }
 }
@@ -408,11 +439,11 @@ function loadBgFromUrl(url, alsoSetInput=true){
 
   // blob: URL은 다른 사람에게 절대 공유 안됨
   if(url.startsWith("blob:")){
-    alert("⚠️ blob: 로 시작하는 URL은 내 PC에서만 보이고 공유가 불가능해.\n이미지를 웹에 올린 뒤(디스코드/이미지호스팅) https URL을 넣어줘.");
+    alert("⚠️ blob: 로 시작하는 URL은 내 PC에서만 보이고 공유가 불가능해.\n이미지를 웹에 올린 뒤 https URL을 넣어줘.");
   }
 
   const img = new Image();
-  img.crossOrigin = "anonymous"; // 가능한 경우
+  img.crossOrigin = "anonymous";
   img.onload = ()=>{
     state.bg = img;
     state.bgUrl = url;
@@ -428,7 +459,7 @@ function loadBgFromUrl(url, alsoSetInput=true){
     draw();
   };
   img.onerror = ()=>{
-    alert("배경 이미지 URL 로드 실패!\n- URL이 직접 이미지(.png/.jpg)로 열리는지 확인\n- 권한 제한(로그인 필요) URL이면 안됨");
+    alert("배경 이미지 URL 로드 실패!\n- URL이 직접 이미지(.png/.jpg)로 열리는지 확인\n- 권한 제한(로그인 필요) URL이면 안 됨\n- raw.githubusercontent.com 형식 권장");
   };
   img.src = url;
 }
@@ -705,8 +736,7 @@ els.saveLink.addEventListener("click", ()=>{
     alert("⚠️ 지금 배경은 로컬 파일(blob:)이라서 공유하면 다른 사람은 못 봅니다.\n배경 URL 입력칸에 https 이미지 URL을 넣어주세요.");
     return;
   }
-  saveToHash();
-  alert("링크 저장 완료! 주소창 링크를 공유하면 배경/노드/라인/포인트가 같이 보입니다.");
+  saveToHashAndCopy();
 });
 
 // 줌 버튼
@@ -892,17 +922,31 @@ els.loadJson.addEventListener("click", ()=>{
 els.labelSize.value = String(state.labelFontSize);
 els.labelSizeLabel.textContent = String(state.labelFontSize);
 
+/** =========================
+ *  ✅ 시작 + hashchange 대응
+ *  ========================= */
+function bootFromHash(){
+  const loaded = loadFromHash();
+  if(loaded){
+    // 공유 링크로 들어오면 SIM + 편집 숨김
+    setViewerMode(true);
+    state.mode = "SIM";
+  }else{
+    setViewerMode(false);
+  }
+  els.ownedSp.value = String(state.owned);
+  draw();
+}
+
+window.addEventListener("hashchange", ()=>{
+  // 공유 링크를 새로 붙여넣어 접속하거나,
+  // 주소창 hash가 바뀌면 즉시 상태 복원
+  bootFromHash();
+});
+
 // 시작
 resize();
-const loaded = loadFromHash();
-if(loaded){
-  // 공유 링크로 들어오면 SIM + 편집 숨김
-  setViewerMode(true);
-  state.mode = "SIM";
-}else{
-  setViewerMode(false);
-}
-draw();
+bootFromHash();
 </script>
 </body>
 </html>
