--- a/index.html
+++ b/index.html
@@ -192,20 +192,6 @@ const cv = document.getElementById("cv");
 const ctx = cv.getContext("2d");
 const stage = document.getElementById("stage");
 
-/** =========================
- *  ✅ base64url (주소 안전)
- *  ========================= */
-function b64urlEncode(str){
-  const b64 = btoa(unescape(encodeURIComponent(str)));
-  return b64.replace(/\+/g,"-").replace(/\//g,"_").replace(/=+$/g,"");
-}
-function b64urlDecode(b64url){
-  const b64 = b64url.replace(/-/g,"+").replace(/_/g,"/");
-  const pad = "===".slice((b64.length + 3) % 4);
-  const out = atob(b64 + pad);
-  return decodeURIComponent(escape(out));
-}
-
 const state = {
   seasonMax: 162,
   mode: "EDIT",
@@ -338,7 +324,7 @@ function pack(){
     lvl: state.lvl,
     view: { scale: state.scale, tx: state.tx, ty: state.ty },
     ui: { labelFontSize: state.labelFontSize },
-    bgUrl: state.bgUrl, // ✅ 배경 URL은 공유를 위해 저장
+    bgUrl: state.bgUrl,
   };
 }
 
@@ -374,38 +360,21 @@ function applyPack(obj){
   state.child = null;
 }
 
-/** =========================
- *  ✅ 링크 저장/불러오기 (안정화)
- *  ========================= */
-function saveToHashAndCopy(){
+function saveToHash(){
   const str = JSON.stringify(pack());
-  const hash = b64urlEncode(str);
-
-  // 주소창 업데이트(새 히스토리 쌓지 않음)
-  history.replaceState(null, "", "#" + hash);
-
-  const shareUrl = location.origin + location.pathname + "#" + hash;
-
-  // 클립보드 복사 (실패하면 prompt로)
-  if(navigator.clipboard && navigator.clipboard.writeText){
-    navigator.clipboard.writeText(shareUrl)
-      .then(()=> alert("링크 저장 완료! (클립보드 복사됨)\n이 링크를 공유하면 노드/라인/포인트/배경이 그대로 보입니다."))
-      .catch(()=> prompt("복사 실패. 아래 링크를 직접 복사해줘:", shareUrl));
-  }else{
-    prompt("아래 링크를 복사해줘:", shareUrl);
-  }
+  const b64 = btoa(unescape(encodeURIComponent(str)));
+  location.hash = b64;
 }
 
 function loadFromHash(){
   try{
-    const h = (location.hash || "").replace(/^#/,"").trim();
+    const h = location.hash.replace("#","");
     if(!h) return false;
-    const str = b64urlDecode(h);
+    const str = decodeURIComponent(escape(atob(h)));
     const obj = JSON.parse(str);
     applyPack(obj);
     return true;
   }catch(e){
-    console.warn("Hash load failed:", e);
     return false;
   }
 }
@@ -430,14 +399,14 @@ function setViewerMode(on){
     els.shareInfo.textContent = "";
   }
 
-  draw();
+  // ✅✅ 핵심 수정: 레이아웃 바뀐 뒤 캔버스 해상도/좌표계를 다시 맞춰야 클릭 판정이 정상
+  requestAnimationFrame(()=>resize());
 }
 
 /** ✅ 배경 URL 로드 (blob:은 공유 불가) */
 function loadBgFromUrl(url, alsoSetInput=true){
   if(!url) return;
 
-  // blob: URL은 다른 사람에게 절대 공유 안됨
   if(url.startsWith("blob:")){
     alert("⚠️ blob: 로 시작하는 URL은 내 PC에서만 보이고 공유가 불가능해.\n이미지를 웹에 올린 뒤 https URL을 넣어줘.");
   }
@@ -448,7 +417,6 @@ function loadBgFromUrl(url, alsoSetInput=true){
     state.bg = img;
     state.bgUrl = url;
 
-    // 화면 가로에 맞춤
     state.scale = stage.clientWidth / img.width;
     state.tx = 0;
     state.ty = 0;
@@ -459,7 +427,7 @@ function loadBgFromUrl(url, alsoSetInput=true){
     draw();
   };
   img.onerror = ()=>{
-    alert("배경 이미지 URL 로드 실패!\n- URL이 직접 이미지(.png/.jpg)로 열리는지 확인\n- 권한 제한(로그인 필요) URL이면 안 됨\n- raw.githubusercontent.com 형식 권장");
+    alert("배경 이미지 URL 로드 실패!\n- URL이 직접 이미지(.png/.jpg)로 열리는지 확인\n- 권한 제한(로그인 필요) URL이면 안됨");
   };
   img.src = url;
 }
@@ -475,7 +443,6 @@ function draw(){
     state.ty*devicePixelRatio
   );
 
-  // 배경은 항상 선명
   if(state.bg){
     ctx.globalAlpha = 1;
     ctx.drawImage(state.bg, 0, 0);
@@ -484,13 +451,11 @@ function draw(){
   const lineAlpha = (state.mode === "SIM") ? 0.55 : 1;
   const nodeAlpha = (state.mode === "SIM") ? 0.45 : 1;
 
-  // 라인
   state.edges.forEach(([p,c])=>{
     const pn = state.nodes.find(n=>n.id===p);
     const cn = state.nodes.find(n=>n.id===c);
     if(!pn||!cn) return;
 
-    // SIM에서만 선행 체크
     let ok = true;
     if(state.mode === "SIM"){
       const cur = state.lvl[p] || 0;
@@ -506,7 +471,6 @@ function draw(){
     ctx.stroke();
   });
 
-  // 노드 + 숫자
   state.nodes.forEach(n=>{
     const cur = state.lvl[n.id] || 0;
 
@@ -577,7 +541,6 @@ cv.addEventListener("mousedown", (e)=>{
   if(node){
     state.selected = node.id;
 
-    // EDIT(잠금해제)에서만 노드 드래그
     if(state.mode === "EDIT" && !state.viewerMode){
       if(e.button === 0){
         state.draggingNode = true;
@@ -586,7 +549,6 @@ cv.addEventListener("mousedown", (e)=>{
         state.dragOff.y = w.y - node.y;
       }
     }else{
-      // SIM 포인트 조작
       if(e.button === 0){
         const cur = state.lvl[node.id] || 0;
         if(cur < node.max) state.lvl[node.id] = cur + 1;
@@ -601,7 +563,6 @@ cv.addEventListener("mousedown", (e)=>{
     return;
   }
 
-  // 빈 곳
   if(e.button === 0){
     if(state.mode === "EDIT" && !state.viewerMode){
       state.pendingAdd = { sx, sy, wx: w.x, wy: w.y };
@@ -628,7 +589,6 @@ cv.addEventListener("mousemove",(e)=>{
     return;
   }
 
-  // 클릭(노드 추가) vs 드래그(화면 이동) 구분
   if(state.pendingAdd){
     const dx = sx - state.pendingAdd.sx;
     const dy = sy - state.pendingAdd.sy;
@@ -651,7 +611,6 @@ cv.addEventListener("mousemove",(e)=>{
 });
 
 cv.addEventListener("mouseup",()=>{
-  // 빈곳 클릭 -> 노드 추가
   if(state.pendingAdd && state.mode === "EDIT" && !state.viewerMode){
     const { wx, wy } = state.pendingAdd;
     const id = `N${String(state.nodes.length+1).padStart(3,"0")}`;
@@ -694,7 +653,6 @@ els.labelSize.addEventListener("input", ()=>{
 });
 
 els.toggleMode.addEventListener("click", ()=>{
-  // 공유자는 SIM 고정
   if(state.viewerMode){
     state.mode = "SIM";
     draw();
@@ -731,12 +689,12 @@ els.resetPoints.addEventListener("click", ()=>{
 });
 
 els.saveLink.addEventListener("click", ()=>{
-  // ✅ 공유 전에 blob URL이면 경고
   if(state.bgUrl && state.bgUrl.startsWith("blob:")){
     alert("⚠️ 지금 배경은 로컬 파일(blob:)이라서 공유하면 다른 사람은 못 봅니다.\n배경 URL 입력칸에 https 이미지 URL을 넣어주세요.");
     return;
   }
-  saveToHashAndCopy();
+  saveToHash();
+  alert("링크 저장 완료! 주소창 링크를 공유하면 배경/노드/라인/포인트가 같이 보입니다.");
 });
 
 // 줌 버튼
@@ -760,7 +718,7 @@ els.bgUrlInput.addEventListener("change", ()=>{
   if(url) loadBgFromUrl(url, false);
 });
 
-// 로컬 파일(편집자용) — 공유용은 반드시 https URL로 바꿔야 함
+// 로컬 파일(편집자용)
 els.bgFile.addEventListener("change", (e)=>{
   if(state.viewerMode){
     alert("공유(뷰어) 모드에서는 배경 업로드가 막혀있습니다. EDIT(관리자)로 잠금 해제하세요.");
@@ -773,7 +731,6 @@ els.bgFile.addEventListener("change", (e)=>{
   const img = new Image();
   img.onload = ()=>{
     state.bg = img;
-    // ⚠️ blob URL은 공유 불가라 저장용 bgUrl로는 넣지 않음
     state.bgUrl = null;
 
     state.scale = stage.clientWidth / img.width;
@@ -922,31 +879,16 @@ els.loadJson.addEventListener("click", ()=>{
 els.labelSize.value = String(state.labelFontSize);
 els.labelSizeLabel.textContent = String(state.labelFontSize);
 
-/** =========================
- *  ✅ 시작 + hashchange 대응
- *  ========================= */
-function bootFromHash(){
-  const loaded = loadFromHash();
-  if(loaded){
-    // 공유 링크로 들어오면 SIM + 편집 숨김
-    setViewerMode(true);
-    state.mode = "SIM";
-  }else{
-    setViewerMode(false);
-  }
-  els.ownedSp.value = String(state.owned);
-  draw();
-}
-
-window.addEventListener("hashchange", ()=>{
-  // 공유 링크를 새로 붙여넣어 접속하거나,
-  // 주소창 hash가 바뀌면 즉시 상태 복원
-  bootFromHash();
-});
-
 // 시작
 resize();
-bootFromHash();
+const loaded = loadFromHash();
+if(loaded){
+  setViewerMode(true);
+  state.mode = "SIM";
+}else{
+  setViewerMode(false);
+}
+draw();
 </script>
 </body>
 </html>
